k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sporty-api
  namespace: sporty
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2k"
spec:
  ingressClassName: nginx
  rules:
  - host: api.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sporty-rest-gateway
            port:
              number: 8080
